--- a/myProject.uvprojx
+++ b/myProject.uvprojx
@@ -397,6 +397,36 @@
               <FileType>1</FileType>
               <FilePath>.\colorHandler.c</FilePath>
             </File>
+            <File>
+              <FileName>buzzer.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\buzzer.h</FilePath>
+            </File>
+            <File>
+              <FileName>buzzer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\buzzer.c</FilePath>
+            </File>
+            <File>
+              <FileName>motor_handler.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\motor_handler.h</FilePath>
+            </File>
+            <File>
+              <FileName>motor_handler.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\motor_handler.c</FilePath>
+            </File>
+            <File>
+              <FileName>pwm.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\pwm.h</FilePath>
+            </File>
+            <File>
+              <FileName>pwm.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\pwm.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
